--- a/static/stylesheets/constants.scss
+++ b/static/stylesheets/constants.scss
@@ -12,3 +12,4 @@ $lightSuccess: lighten(#5cb85c, $lightScale);
 $lightWarning: lighten(#f0ad4e, $lightScale);
 $lightDanger: lighten(#d9534f, $lightScale);
 $lightInfo: lighten(#5bc0de, $lightScale);
+$brandDanger: lighten(#d9534f, $lightScale);
