--- a/static/stylesheets/application.scss
+++ b/static/stylesheets/application.scss
@@ -1,13 +1,13 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import "bootstrap-select";
-@import "font-awesome-sprockets";
-@import "font-awesome";
-@import "jquery-ui";
-@import "bootstrap3-editable/bootstrap-editable";
-@import "rickshaw";
-@import "admin/*";
-@import "*";
+// @import "bootstrap-sprockets";
+// @import "bootstrap";
+// @import "bootstrap-select";
+// @import "font-awesome-sprockets";
+// @import "font-awesome";
+// @import "jquery-ui";
+// @import "bootstrap3-editable/bootstrap-editable";
+// @import "rickshaw";
+// @import "admin/*";
+// @import "*";
 
 .ansible_30 {
   background-color: white;
