--- a/static/css/typeahead.scss
+++ b/static/css/typeahead.scss
@@ -2,19 +2,18 @@ span.twitter-typeahead {
   width: 100%;
 
   .tt-dropdown-menu {
-    @extend .dropdown-menu;
     width: 100%;
   }
 
   .tt-suggestion {
     &.tt-cursor {
-      background-color: $dropdown-link-hover-bg;
+      background-color: #f5f5f5;
     }
 
     > p {
       padding: 8px 15px;
-      line-height: $line-height-base;
-      color: $dropdown-link-color;
+      line-height: 1.428571429;
+      color: #333333;
     }
   }
 }
