--- a/templates/layouts/application.html
+++ b/templates/layouts/application.html
@@ -10,7 +10,7 @@
     {% endassets %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
+  <body class="{{ body_class }}">
     <div class="wrap">
       {% include "shared/header.html" %}
       <div class="container">
