--- a/templates/shared/alerts.html
+++ b/templates/shared/alerts.html
@@ -1,10 +1,9 @@
-<% flash_mapping.each do |type, klass| %>
-  <% if messages = flash[type] %>
-    <% Array.wrap(messages).each do |message| %>
-      <div class="alert alert-<%= klass %>">
+{% for category, msg in get_flashed_messages(with_categories=true) %}
+    {% if loop.first %}
+        <br/>
+    {% endif %}
+    <div class="alert alert-{{ category|alert_class }}">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%= message %>
-      </div>
-    <% end %>
-  <% end %>
-<% end %>
+        {{ msg }}
+    </div>
+{% endfor %}
