--- a/templates/admin/projects/show.html
+++ b/templates/admin/projects/show.html
@@ -1,14 +1,14 @@
+{% extends "layouts/application.html" %}
+{% block content %}
 <h1>Projects</h1>
 
-<%= render_global_lock %>
-
 <section class="clearfix">
-  <% if @projects.empty? %>
+  {% if not projects %}
     <div class="alert alert-warning alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
       You currently don't have any projects setup.
     </div>
-  <% else %>
+  {% else %}
     <table class="table table-hover table-condensed">
       <thead>
         <tr>
@@ -22,14 +22,12 @@
         <%= render partial: "project", collection: @projects %>
       </tbody>
     </table>
-  <% end %>
+  {% endif %}
 
   <div class="admin-actions">
     <div class="pull-right">
-      <%= render "locks/button", lock: global_lock %>
-
-      <%= link_to "Add a new project", new_project_path, class: "btn btn-default" %>
+      <a href="{{ url_for('new_project') }}" class="btn btn-default">Add a new project</a>
     </div>
-    <%= paginate @projects %>
   </div>
 </section>
+{% endblock %}
