--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -1,84 +1,60 @@
 <div class="navbar navbar-inverse">
 
   <div class="container">
-    <a href="{{ url_for('index') }}" class="navbar-brand"></a>
+    <a href="{{ url_for('index') }}" class="navbar-brand">{{ config.PROJECT_NAME or "FuckingAwesomeDeploy" }}</a>
 
     <ul class="nav navbar-nav">
-      {% if current_user %}
-        <li class="dropdown {{ 'active' if request.path.starts_with('/projects') else '' }}">
+      {% if current_user.is_authenticated() %}
+        <li class="dropdown {{ 'active' if request.path.startswith('/projects') else '' }}">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
-{#          <ul class="dropdown-menu">#}
-{#            <% current_user.starred_projects.alphabetical.each do |project| %>#}
-{#              <li>#}
-{#                <%= link_to project_path(project) do %>#}
-{#                  <span class="glyphicon glyphicon-star"></span> <%= project.name %>#}
-{#                <% end %>#}
-{#              </li>#}
-{#            <% end %>#}
-{#            <% (Project.alphabetical.to_a - current_user.starred_projects).each do |project| %>#}
-{#              <li>#}
-{#                <%= link_to project_path(project) do %>#}
-{#                  <span class="glyphicon">&nbsp;</span> <%= project.name %>#}
-{#                <% end %>#}
-{#              </li>#}
-{#            <% end %>#}
-{#          </ul>#}
+          {% if projects %}
+          <ul class="dropdown-menu">
+            {% for project in projects %}
+              <li>
+                <a href="{{ url_for('project', project_id=project.id) }}">
+                  <span class="glyphicon">&nbsp;</span> {{ project.name }}
+                </a>
+              </li>
+            {% endfor %}
+          </ul>
+          {% endif %}
         </li>
-{#        <% if ENV['DEPLOY_GROUP_FEATURE'] %>#}
-{#          <li class="dropdown <%= 'active' if request.path.starts_with?('/dashboards') %>">#}
-{#            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Environments <b class="caret"></b></a>#}
-{#            <ul class="dropdown-menu">#}
-{#              <% Environment.all.each do |env| %>#}
-{#                <li>#}
-{#                  <%= link_to dashboard_path(env) do %>#}
-{#                    <span class="glyphicon">&nbsp;</span> <%= env.name %>#}
-{#                  <% end %>#}
-{#                </li>#}
-{#              <% end %>#}
-{#            </ul>#}
-{#          </li>#}
-{#        <% end %>#}
-{#        <li class="<%= 'active' if current_page?(controller: '/deploys', action: 'recent') %>">#}
-{#          <%= link_to "Recent Deploys", recent_deploys_path %>#}
-{#        </li>#}
-{#        <li class="<%= 'active' if current_page?(controller: '/deploys', action: 'active') %>">#}
-{#          <%= link_to active_deploys_path do %>#}
-{#            Current Deploys#}
-{#            <%= content_tag(:span, Deploy.active.count, class: "badge") unless Deploy.active.count.zero? %>#}
-{#          <% end %>#}
-{#        </li>#}
+        <li class="{{ 'active' if request.path.startswith('/deploys/recent') else '' }} ">
+          <a href="{{ url_for('recent_deploys') }}">Recent Deploys</a>
+        </li>
+        <li class="{{ 'active' if request.path.startswith('/deploys/current') else '' }}">
+            <a href="{{ url_for('active_deploys') }}">
+                Current Deploys
+{#                {% if Deploy.active.count != 0 %}#}
+{#                <span class="badge">Deploy.active.count</span>#}
+{#                {% endif %}#}
+            </a>
+        </li>
+        {% if current_user.is_admin %}
+        <li class="dropdown {{ 'active' if request.path.startswith('/admin') else '' }} ">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="{{ url_for('admin_projects') }}">Projects</a></li>
+            <li><a href="{{ url_for('admin_users') }}">Users</a></li>
+          </ul>
+        </li>
+        {% endif %}
       {% endif %}
-
-{#      <% if current_user.try(:is_admin?) %>#}
-{#        <li class="dropdown <%= 'active' if request.path.starts_with?('/admin') %>">#}
-{#          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>#}
-{#          <ul class="dropdown-menu">#}
-{#            <% if ENV['DEPLOY_GROUP_FEATURE'] %>#}
-{#              <li><%= link_to "Environments", admin_environments_path %></li>#}
-{#              <li><%= link_to "Deploy Groups", admin_deploy_groups_path %></li>#}
-{#            <% end %>#}
-{#            <li><%= link_to "Projects", admin_projects_path %></li>#}
-{#            <li><%= link_to "Commands", admin_commands_path %></li>#}
-{#            <li><%= link_to "Users", admin_users_path %></li>#}
-{#          </ul>#}
-{#        </li>#}
-{#      <% end %>#}
     </ul>
 
     <ul class="nav navbar-nav pull-right">
-{#      <% if logged_in? %>#}
-{#        <li class="dropdown profile">#}
-{#          <a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
-{#            <%= image_tag current_user.gravatar_url, class: "gravatar" %>#}
-{#            <%= current_user.name %>#}
-{#            <b class="caret"></b>#}
-{#          </a>#}
-{#          <ul class="dropdown-menu">#}
-{#            <li><%= link_to "Profile", profile_path %></li>#}
-{#            <li><%= link_to "Logout", logout_path %></li>#}
-{#          </ul>#}
-{#        </li>#}
-{#      <% end %>#}
+    {% if current_user.is_authenticated() %}
+        <li class="dropdown profile">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <img class="gravatar" src="{{ current_user.email|gravatar }}">
+            {{ current_user.name }}
+            <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+          </ul>
+        </li>
+    {% endif %}
     </ul>
   </div>
 </div>
