--- a/templates/projects/_project.html
+++ b/templates/projects/_project.html
@@ -5,19 +5,20 @@
     <ul>
     {% for stage in project.stages %}
         <li class="{{ 'locked' if stage.locked else '' }}">
-            <a href="{{ url_for('project_stage_path',project=project, stage=stage) }}" class="stage-link">stage.name</a>
-            <span class="{{ 'label label-primary' if stage.currently_deploying else '' }}">Deploying</span>
-            <i class="fa fa-lock" title="{{ stage.lock.summary if stage.locked else ''}}"></i>
-
+            <a href="#" class="stage-link">{{ stage.name }}</a>
+            {% if stage.currently_deploying %}<span class="label label-primary">Deploying</span>{% endif %}
+            {% if stage.locked %}<i class="fa fa-lock"></i>{% endif %}
+            {% if stage.last_deploy %}
             <div class="pull-right">
               {% if stage.last_deploy.is_failed %}
                 <a class="no-hover" href="project_deploy_path(project, stage.last_deploy)">
                     <i class="'fa fa-exclamation-triangle deployment-alert"></i>
                 </a>
               {% else %}
-              <a href="{{ project_deploy_path(project, stage.last_deploy) }}" class="status label">{{ stage.last_deploy.short_reference }}</a>
+{#              <a href="{{ project_deploy_path(project, stage.last_deploy) }}" class="status label">{{ stage.last_deploy.short_reference }}</a>#}
               {% endif %}
             </div>
+            {% endif %}
           </li>
     {% endfor %}
     </ul>
