--- a/templates/projects/_form.html
+++ b/templates/projects/_form.html
@@ -1,4 +1,4 @@
-<form action="{{ url_for('admin_projects') }}" method="POST" class="form-horizontal">
+<form action="{{ url_for('new_project') }}" method="POST" class="form-horizontal">
   <fieldset>
     <div class="form-group">
       <label class="col-lg-2 control-label">Name</label>
