--- a/templates/shared/project_tabs.html
+++ b/templates/shared/project_tabs.html
@@ -1,33 +1,18 @@
 <ul class="nav nav-tabs">
-  <li class="<%= 'active' if active == 'overview' %>">
-    <%= link_to "Overview", project_path(project) %>
+  <li class="{{ 'active' if active == 'overview' }}">
+    <a href="{{ url_for('project', project_id=project.id) }}">Overview</a>
   </li>
-  <% if project.manage_releases? %>
-    <li class="<%= 'active' if active == 'releases' %>">
-      <%= link_to "Releases", project_releases_path(project) %>
-    </li>
-  <% end %>
-  <li class="<%= 'active' if active == 'deploys' %>">
-    <%= link_to "Deploys", project_deploys_path(project) %>
+
+  <li class="{{ 'active' if active == 'deploys' }}">
+      <a>Deploys</a>
+{#    <a href="{{ url_for('project_deploys', project_id=project.id) }}">Deploys</a>#}
   </li>
-  <li class="<%= 'active' if active == 'jobs' %>">
-    <%= link_to "Jobs", project_jobs_path(project) %>
+  <li class="{{ 'active' if active == 'webhooks' }}">
+    <a>Webhooks</a>
   </li>
-  <li class="<%= 'active' if active == 'macros' %>">
-    <%= link_to "Macros", project_macros_path(project) %>
+  {% if current_user.is_admin %}
+  <li class="{{ 'active' if active == 'settings' }}">
+    <a href="{{ url_for('edit_project', project_id=project.id) }}">Settings</a>
   </li>
-  <li class="<%= 'active' if active == 'stages' %>">
-    <%= link_to "Stages", project_stages_path(project) %>
-  </li>
-  <li class="<%= 'active' if active == 'webhooks' %>">
-    <%= link_to "Webhooks", project_webhooks_path(project) %>
-  </li>
-  <li class="<%= 'active' if active == 'changelog' %>">
-    <%= link_to "Changelog", project_changelog_path(project) %>
-  </li>
-<% if current_user.is_admin? %>
-  <li class="<%= 'active' if active == 'settings' %>">
-    <%= link_to "Settings", edit_project_path(project) %>
-  </li>
-<% end %>
+  {% endif %}
 </ul>
