--- a/templates/projects/show.html
+++ b/templates/projects/show.html
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for stage in project.stages %}
+    {% for stage in project.stages_data %}
         {% include "projects/_stage.html" %}
     {% endfor %}
   </tbody>
