--- a/templates/deploys/new.html
+++ b/templates/deploys/new.html
@@ -1,7 +1,7 @@
 {% extends "layouts/application.html" %}
 {% block content %}
 <section>
-  <form class="form-horizontal">
+  <form class="form-horizontal" method="POST">
     <fieldset>
 
       <div class="form-group">
