--- a/templates/deploys/_output.html
+++ b/templates/deploys/_output.html
@@ -1,4 +1,4 @@
-<div class="output <%= 'hidden' if @deploy.waiting_for_buddy? || @deploy.pending_non_production? %>">
+<div class="output">
   <div class="clearfix">
     <div class="btn-toolbar pull-right" id="output-toolbar">
       <div id="output-options" class="btn-group only-active">
@@ -9,13 +9,9 @@
 
       <div class="pull-right only-finished">
         <button class="btn btn-default" id="output-grow-toggle">Expand</button>
-        <%= link_to "Download log", project_deploy_path(@project, @deploy, format: :text), class: "btn btn-primary" %>
+        <a class="btn btn-primary" href="{{ url_for('project_deploy', project_id=project.id, deploy_id=deploy.id) }}?format=text">Download log</a>
       </div>
-      <% if @deploy.can_be_stopped_by?(current_user) %>
-        <%= link_to "Stop", project_deploy_path(@project, @deploy), method: :delete, class: "btn btn-danger pull-right only-active" %>
-      <% end %>
     </div>
   </div>
-
-  <%= render "log", deploy: @deploy %>
+  {% include "deploys/_log.html" %}
 </div>
