--- a/templates/deploys/_log.html
+++ b/templates/deploys/_log.html
@@ -1,7 +1,4 @@
 <pre id="messages" class="pre-scrollable log">
-{% if not deploy.active %}
-    {% for line in deploy.output.split("\n") %}
-        {{ line | safe }}
-    {% endfor %}
-{% endif %}
+{% for line in deploy.output.split("\n") %}
+{{ line | safe }}{% endfor %}
 </pre>
