--- a/templates/deploys/index.html
+++ b/templates/deploys/index.html
@@ -16,7 +16,7 @@
       </thead>
       <tbody>
         {% for deploy in deploys %}
-            {% include "project/_deploy.html" %}
+            {% include "projects/_deploy.html" %}
         {% endfor %}
       </tbody>
     </table>
