--- a/templates/admin/users/_user.html
+++ b/templates/admin/users/_user.html
@@ -2,7 +2,7 @@
   <td>{{ user.id }}</td>
   <td>{{ user.name }}</td>
   <td>{{ user.email }}</td>
-  <td class="role" data-user-id="<%= user.id %>">
+  <td class="role" data-user-id="{{ user.id }}">
     <div class="relative-wrapper">
         {% include "admin/users/_roles.html" %}
     </div>
