--- a/templates/projects/_deploy.html
+++ b/templates/projects/_deploy.html
@@ -1,8 +1,8 @@
   <tr>
-    <td>{{ deploy.time }}</td>
+    <td>{{ deploy.created_date }}</td>
     <td>
        <a href="{{ url_for('project_deploy', project_id=project.id, deploy_id=deploy.id) }}">{{ deploy.summary }}</a>
     </td>
-    <td><span class="label label-{{ deploy.status | lower }}">{{ deploy.status }}</span></td>
+    <td><span class="label label-{{ deploy.status_label_class }}">{{ deploy.status_label }}</span></td>
   </tr>
 
