--- a/templates/projects/_form.html
+++ b/templates/projects/_form.html
@@ -3,14 +3,14 @@
     <div class="form-group">
       <label class="col-lg-2 control-label">Name</label>
       <div class="col-lg-4">
-        <input type="text" name="name" class="form-control" value="{{ project.name }}">
+        <input type="text" name="name" class="form-control" value="{{ project.name or '' }}">
       </div>
     </div>
 
     <div class="form-group">
       <label class="col-lg-2 control-label">Description</label>
       <div class="col-lg-4">
-        <textarea name="description" class="form-control"> {{ project.description }}</textarea>
+        <textarea name="description" class="form-control"> {{ project.description or '' }}</textarea>
         <p class="help-block">How would you explain the project to someone new?</p>
       </div>
     </div>
