--- a/templates/shared/project_tabs.html
+++ b/templates/shared/project_tabs.html
@@ -7,7 +7,7 @@
     <a href="{{ url_for('project_deploys', project_id=project.id) }}">Deploys</a>
   </li>
   <li class="{{ 'active' if active == 'webhooks' }}">
-    <a>Webhooks</a>
+    <a href="{{ url_for('project_webhooks', project_id=project.id) }}">Webhooks</a>
   </li>
   <li class="{{ 'active' if active == 'stages' }}">
     <a href="{{ url_for('project_stages', project_id=project.id) }}">Stages</a>
