--- a/templates/stages/index.html
+++ b/templates/stages/index.html
@@ -16,6 +16,7 @@
           {% endif %}
         </div>
       <br>
+      {% if current_user.is_admin %}
       <div class="panel panel-default panel-edit-stage" style="display:none; margin-top:20px">
           <div class="panel-heading">Update info of stage</div>
           <div class="panel-body">
@@ -42,8 +43,10 @@
         </form>
           </div>
       </div>
+      {% endif %}
       </li>
       {% endfor %}
+      {% if current_user.is_admin %}
       <li class="stage-bar bar list-unstyled clearfix new-stage-item" style="display:none;">
         ::: {{ project.name }}: <a class="edit-stage-btn">New stage</a>
       <br>
@@ -75,6 +78,7 @@
           </div>
       </div>
       </li>
+      {% endif %}
   </ul>
 
   {% if current_user.is_admin %}
